--- a/frontend/my-react-app/src/components/pages/Info/InfoPage.css
+++ b/frontend/my-react-app/src/components/pages/Info/InfoPage.css
@@ -1119,6 +1119,7 @@
 }
 
 .info-faq-section::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -1172,6 +1173,7 @@
 }
 
 .info-final-cta::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
